modules/gatekeeper/policies/block-nodeport.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockNodePort
metadata:
  name: block-node-port
  namespace: ${app_namespace}
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
